# Tempered-Studio-Mobile

./: .gitignore  README.md  build-apk.sh  gradle.properties  settings.gradle.kts
.github/workflows/: apk.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/gui/: README.md  index.html  study-guide.md
app/src/main/assets/store/book/: NOTICE.txt
app/src/main/assets/store/cheatsheets/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6-generics.md  phase6.md  phase7.md  phase8.md  phase9.md  tooling.md
app/src/main/assets/store/glossary/: glossary.json  glossary.toml
app/src/main/assets/store/lessons/: 00-hello-world.md  01-bindings-and-immutability.md  02-mutability.md  03-shadowing.md  04-constants.md  05-number-types-and-overflow.md  05-scalar-types.md  05b-integer-overflow.md  06-expressions-statements-semicolon.md  07-functions.md  08-comments-and-printing.md  09-if-else-expressions.md  09-if-else.md  09b-if-as-expression.md  10-loop-and-break.md  10-loops.md  10b-while.md  10c-for-and-ranges.md  11-match-intro.md  12-string-vs-str.md  13-tuples-arrays-slices.md  13-tuples.md  13b-arrays.md  13c-slices.md  14-vec-hashmap.md  14-vec.md  14b-hashmap.md  15-ownership-and-moves.md  15-ownership.md  15b-moves.md  15c-copy-and-clone.md  16-references-and-borrowing.md  16-shared-references.md  16b-mutable-references.md  17-slices-in-depth.md  18-defining-structs.md  18-structs.md  18b-methods-and-impl.md  18c-derive-debug.md  19-enums-and-matching.md  (+63 more)
app/src/main/assets/store/quizzes/: phase1.md  (+10 more)
app/src/main/res/values/: colors.xml  strings.xml
rust/: Cargo.toml
rust/src/: lib.rs
(+156 files in other folders)
