[package]
name = "tempered_seam"
version = "0.1.0"
edition = "2021"
description = "JNI shim exposing the Tempered Studio language seam (rpro-lang) to the Android app"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
rpro-lang = { git = "https://github.com/thepictishbeast/Tempered-Studio", branch = "textbook-integration" }
rpro-lang-rust = { git = "https://github.com/thepictishbeast/Tempered-Studio", branch = "textbook-integration", package = "rpro-lang-rust" }
